# HarkDB

./: .gitignore  .travis.yml  CLI.cpp  CMakeLists.txt  FutharkContext.py  Makefile  README.md  data.csv  db.fut  db_gpu_load.c  db_gpu_load.cpp  db_gpu_load.h  dotprod.c  dotprod.fut  dotprod.h  dotprod.hpp  example.queries  groupby.fut  load_csv.c  load_csv.cpp  load_csv.h  load_table.py  luser.c  metaCommand.cpp  metaCommand.h  out  parse.py  parser.py  query_parser.cpp  query_parser.h  repl.py  requirements.txt  setup.sh  stdin.txt  table.cpp  table.h  table.py  test.py  updated.c
CodeGen/: futGen.py  fut_gen.py
backends/: dotprod.c  dotprod.cs  dotprod.h  dotprod.py  dotprod_cuda.c  dotprod_cuda.h
benchmark/: backend_bench.sh  csv_generator.py  groupby_results.txt  join_results.txt  join_results1.txt  select_results.txt  sql_groupby_results.txt  sql_join_results.txt  sql_select_results.txt  sqlsteps.txt
dataset/: generate.py
examples/: fut_call_example.py
futhark/: Makefile  db.fut  futhark.pkg  groupby.fut  join.fut  main.fut  select.fut  select_where.fut
futhark/lib/github.com/diku-dk/segmented/: segmented.fut
parser/: analyzer.py  parser.py  query.py  test.py
repl/: repl.py
tables/: table.py
tests/: metaCommandTest.cpp  queryRepTest.cpp  tableTest.cpp
tests/resources/: DataTest.csv
